--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <div class="center" id="confettiCanvas">
       
         <div class="top-heading">
-            <div class="top-img"><h1 class="glow">Happy Birthday</h1></div>
+            <!--div class="top-img"><h1 class="glow">Happy Birthday</h1></div-->
+            <div class="video-container">
+              <video autoplay muted loop id="background-video">
+                  <source src="https://drive.google.com/uc?id=15k8GOTk3-_YOVnBmDe-8qZO7fLcuvJrX" type="video/mp4">
+              </video>
+            </div>
             <p class="p-t">Happy Birthday! <br> Wishing you a day as beautiful as your smile.</p>
             <div class="down-arrow"></div>
         </div>
@@ -104,7 +109,9 @@
         </section>
 
 
-       
+       <div class="footer">
+          <a href="https://instagram.com/mohitkhyalia_mk">Developer</a>
+        </div>
     </div>
     <!--audio id="myAudio1" src="https://drive.google.com/uc?id="></!--audio-->
 
