--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
     <!--audio id="myAudio1" src="https://drive.google.com/uc?id="></!--audio-->
 
-    <audio id="myAudio" preload="auto" src="https://drive.google.com/uc?id=1IhgDAlAT3TG3wrjr2VVL05LQleFSdocG"></audio>
+    <audio id="myAudio" preload="auto" src=""></audio>
 
     <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.12.0/tsparticles.confetti.bundle.min.js"></script>
     <script>
@@ -160,7 +160,7 @@ canvas.height = window.innerHeight;
 const durationt = 10000; // Set your desired animation duration here (10 seconds)*/
 var audio = document.getElementById("myAudio");
 document.getElementById("div1").addEventListener("mouseenter", function() {
-    audio.src = "deewa.mp3"; // Set the source of the audio element to song 4
+    audio.src = "Happy Birthday Song Lyrics Video ♥️😘 -- WhatsApp Status --.mp3"; // Set the source of the audio element to song 4
     playSong();
 });
 
@@ -170,7 +170,7 @@ document.getElementById("div2").addEventListener("mouseenter", function() {
 });
 
 document.getElementById("div3").addEventListener("mouseenter", function() {
-    audio.src = "https://drive.google.com/uc?id=1IhgDAlAT3TG3wrjr2VVL05LQleFSdocG"; // Set the source of the audio element to song 4
+    audio.src = "Dekha Hazaro Dafaa - Rustom - Akshay Kumar & Ileana D'cruz - Arijit Singh & Palak - Jeet Gannguli (1).mp3"; // Set the source of the audio element to song 4
     playSong();
 });
 
