--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
              </div>
       
               <div class="hcard">
-              <div class="imgBx" id="hoverElement" onmouseover="playSong()" onmouseout="pauseSong()">
+              <div class="imgBx" onmouseover="playSong3()" onmouseout="pauseSong3()">
                   <img src="https://drive.google.com/uc?id=15j2-FshbJ9Jqy9S1Xn4qyD5mIlXd4wGF" alt="images">
               </div>
               <div class="details">
