--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <a href="https://instagram.com/mohitkhyalia_mk">Developer</a>
         </div>
     </div>
-    <audio id="play1" preload="auto" src="dekha.mp3"></audio>
+    <audio id="play1" preload="auto" src="Dekha.mp3"></audio>
     <audio id="play2" preload="auto" src="Tu-Hai.mp3"></audio>
     <audio id="play3" preload="auto" src="tmr.mp3"></audio>
     <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.12.0/tsparticles.confetti.bundle.min.js"></script>
